# python-flask-server/swagger_server/controllers/home_controller.py
@@ -1,23 +1,12 @@
 import connexion
 import six
+import farmhash
 
 from swagger_server.models.dataframe import Dataframe  # noqa: E501
 from swagger_server.models.endpoints import Endpoints  # noqa: E501
 from swagger_server.models.hash import Hash  # noqa: E501
 from swagger_server.models.update import Update  # noqa: E501
-from swagger_server import util, populate_spicedb
-
-
-def get_home_dataframe():  # noqa: E501
-    """Dataframe of the home directory in JSON
-
-     # noqa: E501
-
-
-    :rtype: List[Dataframe]
-    """
-    return 'do some magic!'
-
+from swagger_server import util, populate_spicedb, sqlselect_command, sqlselect_dataframe
 
 def get_home_endpoints():  # noqa: E501
     """List of available endpoints from home directory
@@ -27,18 +16,17 @@ def get_home_endpoints():  # noqa: E501
 
     :rtype: List[Endpoints]
     """
-    return 'do some magic!'
+    return ["/hash", "/update", "/naif", "/missions", "/refresh", "/update"]
 
 
 def get_home_hash():  # noqa: E501
     """Hash of the home dataframe
 
-     # noqa: E501
-
-
-    :rtype: List[Hash]
+     # noqa: E5    :rtype: List[Hash]
     """
-    return 'do some magic!'
+    rows = sqlselect_command("SELECT * FROM SPICE")
+    df = sqlselect_dataframe(rows)
+    return farmhash.hash64(str(df.values))
 
 
 def refresh_db():  # noqa: E501
